--- a/HempPlantationsDatabase/Views/Home/ShowDistinctConsumers.cshtml
+++ b/HempPlantationsDatabase/Views/Home/ShowDistinctConsumers.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<int>
 
-<h1>Distinct Customers</h1>
+<h1>Distinct Consumer</h1>
 
 <table class="table">
     <thead>
         <tr>
-            <th>Customer ID</th>
+            <th>Consumer ID</th>
         </tr>
     </thead>
     <tbody>
