--- a/HempPlantationsDatabase/Views/Harvests/Create.cshtml
+++ b/HempPlantationsDatabase/Views/Harvests/Create.cshtml
@@ -1,25 +1,25 @@
 ﻿@model databaseHempPlantations.Models.Harvest
 
-<h1>Create Harvest</h1>
+<h1>Event 1</h1>
 
 <form asp-action="Create" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="AgronomistID" class="control-label">Agronomist ID</label>
+        <label asp-for="AgronomistID" class="control-label">Agronomist</label>
         <select asp-for="AgronomistID" class="form-control" asp-items="ViewBag.AgronomistID"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="VarietyID" class="control-label">Variety ID</label>
+        <label asp-for="VarietyID" class="control-label">Variety</label>
         <select asp-for="VarietyID" class="form-control" asp-items="ViewBag.VarietyID"></select>
     </div>
 
-@*     <div class="form-group">
-        <label asp-for="HarvestDate" class="control-label">Harvest Date</label>
-        <input asp-for="HarvestDate" type="datetime-local" class="form-control" value="@DateTime.UtcNow" />
-        <span asp-validation-for="HarvestDate" class="text-danger"></span>
-    </div> *@
+    <div class="form-group">
+        <label for="date">Date:</label>
+        <input type="datetime" id="date" name="HarvestDate" required />
+        <label>Вводити у такому форматі(скопіюйте та змініть) - 2019-05-08T12:00:00+03:00</label>
+    </div>
 
     <div class="form-group">
         <label asp-for="Quantity" class="control-label">Quantity</label>
