--- a/HempPlantationsDatabase/Views/Tastings/Create.cshtml
+++ b/HempPlantationsDatabase/Views/Tastings/Create.cshtml
@@ -1,27 +1,33 @@
 ﻿@model databaseHempPlantations.Models.Tasting
 
-<h1>Create Tasting</h1>
+<h1>Event 2</h1>
 
-<form asp-action="Create" method="post">
+<form id="myForm" asp-action="Create" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="AgronomistID" class="control-label">Agronomist ID</label>
+        <label asp-for="AgronomistID" class="control-label">Agronomist</label>
         <select asp-for="AgronomistID" class="form-control" asp-items="ViewBag.AgronomistID"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="ConsumerID" class="control-label">Consumer ID</label>
+        <label asp-for="ConsumerID" class="control-label">Consumer</label>
         <select asp-for="ConsumerID" class="form-control" asp-items="ViewBag.ConsumerID"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="ProductID" class="control-label">Product ID</label>
+        <label asp-for="ProductID" class="control-label">Product</label>
         <select asp-for="ProductID" class="form-control" asp-items="ViewBag.ProductID"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="Rating" class="control-label">Rating</label>
+        <label for="date">Date:</label>
+        <input type="datetime" id="date" name="ReturnDate" required />
+        <label>Вводити у такому форматі(скопіюйте та змініть) - 2019-05-08T12:00:00+03:00</label>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Rating" class="control-label">Rating tasting</label>
         <input asp-for="Rating" class="form-control" />
         <span asp-validation-for="Rating" class="text-danger"></span>
     </div>
