--- a/HempPlantationsDatabase/Views/Trips/Create.cshtml
+++ b/HempPlantationsDatabase/Views/Trips/Create.cshtml
@@ -1,18 +1,24 @@
 ﻿@model databaseHempPlantations.Models.Trip
 
-<h1>Create Trip</h1>
+<h1>Event 5</h1>
 
 <form asp-action="Create" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="AgronomistID" class="control-label">Agronomist ID</label>
+        <label asp-for="AgronomistID" class="control-label">Agronomist</label>
         <select asp-for="AgronomistID" class="form-control" asp-items="ViewBag.AgronomistID"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="HarvestID" class="control-label">Harvest ID</label>
+        <label asp-for="HarvestID" class="control-label">Harvest</label>
         <select asp-for="HarvestID" class="form-control" asp-items="ViewBag.HarvestID"></select>
+    </div>
+
+    <div class="form-group">
+        <label for="date">Date:</label>
+        <input type="datetime" id="date" name="TripDate" required />
+        <label>Вводити у такому форматі(скопіюйте та змініть) - 2019-05-08T12:00:00+03:00</label>
     </div>
 
     <div class="form-group">
