--- a/HempPlantationsDatabase/Views/Trips/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Trips/Index.cshtml
@@ -28,6 +28,7 @@
             margin: 5px 0;
         }
     </style>
+    <a href="@Url.Action("Create", "Trips")" class="list-group-item list-group-item-action btn btn-primary">Create</a>
 </head>
 <body>
     <h2>Trips</h2>
