--- a/HempPlantationsDatabase/Views/Home/ShowTastingCounts.cshtml
+++ b/HempPlantationsDatabase/Views/Home/ShowTastingCounts.cshtml
@@ -1,11 +1,12 @@
-﻿@model IEnumerable<int>
+﻿@*  @model IEnumerable<TastingCountViewModel> *@
+@model IEnumerable<object>
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Distinct Consumers</title>
+    <title>Tasting Count for Agronomist and Product</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -34,19 +35,24 @@
     </style>
 </head>
 <body>
-    <h1>Distinct Consumers</h1>
+    <h1>Tasting Count for Agronomist and Product</h1>
 
     <table>
         <thead>
             <tr>
-                <th>Consumer ID</th>
+                <th>Agronomist ID</th>
+                <th>Product ID</th>
+                <th>Tasting Count</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var customerId in Model)
+            @foreach (var item in Model)
             {
                 <tr>
-                    <td>@customerId</td>
+                    <td>@item</td>
+                    @* <td>@item.AgronomID</td>
+                <td>@item.ProductID</td>
+                <td>@item.TastingCount</td> *@
                 </tr>
             }
         </tbody>
