--- a/HempPlantationsDatabase/Views/Purchases/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Purchases/Index.cshtml
@@ -28,6 +28,7 @@
             margin: 5px 0;
         }
     </style>
+    <a href="@Url.Action("Create", "Purchases")" class="list-group-item list-group-item-action btn btn-primary">Create</a>
 </head>
 <body>
     <h2>Purchases</h2>
