--- a/HempPlantationsDatabase/Views/Home/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Home/Index.cshtml
@@ -41,8 +41,8 @@
                     <a href="@Url.Action("Create", "Harvests")" class="list-group-item list-group-item-action btn btn-primary">Агроном збирає урожай деякого сорту коноплі</a>
                     <a href="@Url.Action("Create", "Tastings")" class="list-group-item list-group-item-action btn btn-primary">Агроном проводить дегустацiю продукту для споживача</a>
                     <a href="@Url.Action("Create", "Purchases")" class="list-group-item list-group-item-action btn btn-primary">Споживач купує у агронома продукт</a>
-                    <a href="@Url.Action("Create", "Returns")" class="list-group-item list-group-item-action btn btn-primary">Споживач повертає продукт;</a>
-                    <a href="@Url.Action("Create", "Trips")" class="list-group-item list-group-item-action btn btn-primary">Агроном їде у вiдрядження;</a>
+                    <a href="@Url.Action("Create", "Returns")" class="list-group-item list-group-item-action btn btn-primary">Споживач повертає продукт</a>
+                    <a href="@Url.Action("Create", "Trips")" class="list-group-item list-group-item-action btn btn-primary">Агроном їде у вiдрядження</a>
                     <a href="@Url.Action("Create", "Reviews")" class="list-group-item list-group-item-action btn btn-primary">Споживач залишає вiдгук у книзi скарг та пропозицiй</a>
                 </div>
             </div>
